Added a stiffened panel buckling model

--- a/python/doc/math_notations.sty
+++ b/python/doc/math_notations.sty
@@ -3,6 +3,12 @@
 
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{siunitx}
+
+% Non-standard units
+\DeclareSIUnit{\mph}{mph}
+\DeclareSIUnit{\rpm}{rpm}
+\DeclareSIUnit{\year}{y}
 
 % The physical model
 \newcommand{\model}{g}
