--- a/python/doc/math_notations.sty
+++ b/python/doc/math_notations.sty
@@ -7,6 +7,8 @@
 % The physical model
 \newcommand{\model}{g}
 
+\newcommand{\scalarproduct}[2]{\left\langle #1, #2 \right\rangle}
+
 % For matrixes and vectors
 \newcommand{\vect}[1]{{\mathbf{\boldsymbol{{#1}}}}}
 \newcommand{\mat}[1]{{\vect{\vect{#1}}}}
