Create new leastSquares and modelSelection attributes for linear models
Create new LinearModelResult.computeProjectionMatrix()

--- a/python/doc/math_notations.sty
+++ b/python/doc/math_notations.sty
@@ -40,6 +40,8 @@
 \newcommand{\supp}[1] {\operatorname{supp}\left(#1\right)}  % The support of a distribution
 \newcommand{\sampleSize}{n}  % The sample size
 
+\newcommand{\metamodel}{{\widehat{\model}}}
+
 \newcommand{\scalarproduct}[2]{\left\langle #1, #2 \right\rangle}
 
 % A set
