--- a/TODO
+++ b/TODO
@@ -10,3 +10,6 @@ Remove TimerCallback
 Remove ComposedDistribution in some future version
 Remove ComposedCopula in some future version
 Remove Study.printLabels
+Remove MetaModelValidation(inputSample, outputSample, metaModel)
+Remove MetaModelValidation::computePredictivityFactor
+Remove MetaModelValidation::getInputSample
