--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@
  * PointToFieldFunctionalChaosAlgorithm (openturns.experimental)
  * CubaIntegration (openturns.experimental)
  * ExperimentIntegration (openturns.experimental)
+ * RankSobolSensitivityAlgorithm (openturns.experimental)
 
 ==== API changes ====
  * Removed deprecated Pagmo.setGenerationNumber
