--- a/ChangeLog
+++ b/ChangeLog
@@ -50,6 +50,7 @@
  * Deprecated ComposedCopula in favor of BlockIndependentCopula
  * Added Polygon::FillBetween static method to fill the surface between two curves
  * Deprecated Study.printLabels (see getLabels)
+ * Removed optional parameters from Contour constructors, use set methods or ResourceMap keys to set them
 
 === Documentation ===
 * Examples show how to visualize matrices
