--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@
 
 ==== New classes ====
  * New LeastSquaresEquationsSolver class (openturns.experimental)
+ * CombinationsDistribution (openturns.experimental)
 
 ==== API changes ====
 
