Implement FunctionalChaosValidation and LinearModelValidation
Take S.H.'s review into account

Apply suggestions from code review
Co-authored-by: Sofiane Haddad <sofianehaddad@users.noreply.github.com>

Factored LOO and K-Fold into MetaModelValidation

--- a/ChangeLog
+++ b/ChangeLog
@@ -41,6 +41,7 @@
  * Vector=>Field chaos-based metamodel and sensitivity algorithm
 
 ==== New classes ====
+ * FunctionalChaosValidation (openturns.experimental)
  * SmoothedUniformFactory (openturns.experimental)
  * GeneralizedParetoValidation (openturns.experimental)
  * SamplePartition (openturns.experimental)
