--- a/python/doc/math_notations.sty
+++ b/python/doc/math_notations.sty
@@ -19,7 +19,7 @@
 % The physical model
 \newcommand{\model}{g}
 \newcommand{\inputDim}{d}  % The input dimension of the model
-\newcommand{\outputDim}{d_Y}  % The output dimension of the model
+\newcommand{\outputDim}{{d_Y}}  % The output dimension of the model
 \newcommand{\inputDomain}{\mathcal{D}}  % Input domain of the model
 \newcommand{\metaModel}{\widetilde{\model}}  % The surrogate model
 
