--- a/distro/debian/changelog
+++ b/distro/debian/changelog
@@ -1,3 +1,9 @@
+openturns (1.23~rc1-1) experimental; urgency=medium
+
+  * New upstream pre-release
+
+ -- Julien Schueller <schueller@phimeca.com>  Thu, 02 May 2024 10:19:33 +0100
+
 openturns (1.22-1) experimental; urgency=medium
 
   * New upstream release
