--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,23 @@
 = New Features =
 
+== 1.24 release (in progress) == #release-1.24
+
+=== Library ===
+
+==== Major changes ====
+
+==== New classes ====
+
+==== API changes ====
+
+=== Documentation ===
+
+=== Python module ===
+
+=== Miscellaneous ===
+
+
+
 == 1.23rc1 release (2024-05-03) == #release-1.23rc1
 
 === Library ===
