--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,7 @@
  * Removed deprecated Solver.set/getMaximumFunctionEvaluation
  * Removed deprecated Solver.getUsedFunctionEvaluation
  * Removed deprecated Sample/CorrelationAnalysis.computePearsonCorrelation
+ * Removed deprecated Cobyla/TNC.setIgnoreFailure method
 
 === Documentation ===
 
