OptimizationResult: Drop deprecated getEvaluationNumber

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,7 @@
  * Removed deprecated Sample/CorrelationAnalysis.computePearsonCorrelation
  * Removed deprecated Cobyla/TNC.setIgnoreFailure method
  * Removed deprecated OptimizationAlgorithm.setMaximumEvaluationNumber method
+ * Removed deprecated OptimizationResult.getEvaluationNumber
 
 === Documentation ===
 
