InverseGamma: Swap shape/scale parameters
Closes #2694

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 === Library ===
 
 ==== Major changes ====
+ * Swapped InverseGamma shape/scale parameters: InverseGamma(k, lambda)
 
 ==== New classes ====
 
