Renamed and improved BayesDistribution into JointByConditioningDistribution
Thanks to a new formula for the CDF, computeCDF() is now way faster and much more accurate when the range of the conditioned distribution changes with the conditioning value.

--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,7 @@
  * Removed deprecated Cobyla/TNC.setIgnoreFailure method
  * Removed deprecated OptimizationAlgorithm.setMaximumEvaluationNumber method
  * Removed deprecated OptimizationResult.getEvaluationNumber
+ * Deprecated BayesDistribution in favor of JointByConditioningDistribution
 
 === Documentation ===
  * Copy button for code blocks
