--- a/python/doc/math_notations.sty
+++ b/python/doc/math_notations.sty
@@ -4,6 +4,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{siunitx}
+\usepackage{ stmaryrd }
 
 % Non-standard units
 \DeclareSIUnit{\mph}{mph}
