Renamed ConditionalDistribution into DeconditionedDistribution
There is a spurious use of the DeconditionedDistribution into the PosteriorDistribution as a way to embed the contidioned distribution, the link function and the conditioning distribution.

--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,7 @@
  * Removed deprecated OptimizationAlgorithm.setMaximumEvaluationNumber method
  * Removed deprecated OptimizationResult.getEvaluationNumber
  * Deprecated BayesDistribution in favor of JointByConditioningDistribution
+ * Deprecated ConditionalDistribution in favor of DeconditionedDistribution
 
 === Documentation ===
  * Copy button for code blocks
