Renamed NegativeBinomialFactory into PolyaFactory

--- a/ChangeLog
+++ b/ChangeLog
@@ -25,6 +25,7 @@
  * Deprecated BayesDistribution in favor of JointByConditioningDistribution
  * Deprecated ConditionalDistribution in favor of DeconditionedDistribution
  * Deprecated NegativeBinomial in favor of Polya
+ * Deprecated NegativeBinomialFactory in favor of PolyaFactory
 
 === Documentation ===
  * Copy button for code blocks
