Included Michael remarks about PR#2749

--- a/python/doc/math_notations.sty
+++ b/python/doc/math_notations.sty
@@ -48,11 +48,9 @@
 
 % A set
 \newcommand{\set}[1]{\mathcal{#1}}
-% The set of standard input variables
-\newcommand{\standardInputSpace}{\set{Z}}
-% The set of physical input variables
+% The input domain of the physical model
 \newcommand{\physicalInputSpace}{\set{X}}
-% The set of physical output variables
+% The output domain of the physical model
 \newcommand{\physicalOutputSpace}{\set{Y}}
 
 % The probability density function of the input random vector
