EGO: Drop improvement factor accessors
The improvement factor is really complex to handle as the EGO is not a
"classical" optimisation solver; thus no guarantee to improve the
optimum at each iteration

Fixes #2755

--- a/ChangeLog
+++ b/ChangeLog
@@ -26,6 +26,7 @@
  * Deprecated ConditionalDistribution in favor of DeconditionedDistribution
  * Deprecated NegativeBinomial in favor of Polya
  * Deprecated NegativeBinomialFactory in favor of PolyaFactory
+ * Removed EfficientGlobalOptimization.get/setImprovementFactor improvement factor accessors
 
 === Documentation ===
  * Copy button for code blocks
