--- a/TODO
+++ b/TODO
@@ -4,3 +4,4 @@ Remove ComposedDistribution in some future version
 Remove ComposedCopula in some future version
 Remove NegativeBinomial alias in some future version
 Remove NegativeBinomialFactory alias in some future version
+Remove OptimizationAlgorithm::Build(String) in some future version
