--- a/python/doc/math_notations.sty
+++ b/python/doc/math_notations.sty
@@ -48,6 +48,8 @@
 
 % A set
 \newcommand{\set}[1]{\mathcal{#1}}
+% The set of standard input variables
+\newcommand{\standardInputSpace}{\set{Z}}
 % The input domain of the physical model
 \newcommand{\physicalInputSpace}{\set{X}}
 % The output domain of the physical model
