--- a/ChangeLog
+++ b/ChangeLog
@@ -34,6 +34,7 @@
 
 === Documentation ===
  * Copy button for code blocks
+ * Added new use case: Fission gas release and example of use
 
 === Python module ===
  * Cross-cuts of multivariate Functions can be drawn with the drawCrossCut method
