--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,23 @@
 = New Features =
 
+== 1.25 release (in-progress) == #release-1.25
+
+=== Library ===
+
+==== Major changes ====
+
+==== New classes ====
+
+==== API changes ====
+
+=== Documentation ===
+
+=== Python module ===
+
+=== Miscellaneous ===
+
+
+
 == 1.24rc1 release (2024-10-23) == #release-1.24rc1
 
 === Library ===
