--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,8 @@
 === Python module ===
 
 === Miscellaneous ===
+ * New Gauss Legendre algorithm to generate weights and nodes, relying on
+	FastGL (https://sourceforge.net/projects/fastgausslegendrequadrature/)
 
 
 
