--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 = New Features =
 
-== 1.24rc1 release (2024-10-23) == #release-1.24rc1
+== 1.24 release (2024-11-26) == #release-1.24
 
 === Library ===
 
@@ -41,6 +41,7 @@
  * SobolSimulationAlgorithm.setExperimentSize must be used to set the DOE size instead of setBlockSize
  * Deprecated SobolSimulationAlgorithm.setBatchSize, use setBlockSize instead
  * Swapped InverseGamma shape/scale parameters: InverseGamma(k, lambda)
+ * Deprecated Graph legendFontSize & logScale arguments
 
 === Documentation ===
  * Copy button for code blocks
@@ -63,8 +64,9 @@
  * New FunctionalChaosResult.getConditionalExpectation
  * New Gauss Legendre algorithm to generate weights and nodes, relying on
    FastGL (https://sourceforge.net/projects/fastgausslegendrequadrature/)
+ * Upgrade ExprTk 0.0.3
 
-=== Bug fixes (total 39) ===
+=== Bug fixes (total 55) ===
  * #1077 (Docstrings suggest kwargs are available)
  * #1179 (The SobolSimulationAlgorithm class has doc issues.)
  * #1199 (LinearModelTest_LinearModelDurbinWatson does not take the firstSample into account in the actual Durbin-Watson test)
@@ -81,12 +83,14 @@
  * #2166 (Curious indents on doc)
  * #2318 (The target-HSIC example provides an incorrect algorithm parameterization)
  * #2508 (Cobyla claim to support bounds, but does not)
+ * #2543 (New default colors are visually broking examples)
  * #2549 (SpecFunc.MaxScalar is undocumented)
  * #2552 (ComputeQuantile for discrete variables)
  * #2560 (CalibrationResult has no isBayesian() method)
  * #2565 (give star discrepancy formula)
  * #2629 (There are duplicate and inconsistent mathematical notations)
  * #2674 (Add a "copybutton" feature to any code box in the doc)
+ * #2675 (Access Symbolic function inputs in a smarter way)
  * #2685 (Minor spelling errors in OT 1.23)
  * #2689 (t_Bonmin_std.py fails on arm64, ppc64, ppc64el)
  * #2690 (allow finish optimization wo feasible points)
@@ -95,15 +99,29 @@
  * #2707 (errors in Wilks doc)
  * #2708 (NegativeBinomialDistribution should be renamed PolyaDistribution)
  * #2710 (SimplicialCubature to use IntegrationAlgorithm interface)
+ * #2723 (FunctionalChaosAlgorithm.run() can fail)
  * #2731 (The API help doc of CleaningStrategy is wrong)
  * #2732 (MixtureClassifier.grade has a wrong error message)
  * #2755 (The improvement factor of the EfficientGlobalOptimization is useless)
  * #2761 (The name of the attributes is not consistent in the use cases)
  * #2769 (Error when using a ConditionedGaussianProcess with output dimension > 1)
  * #2773 (NAIS and StandardSpaceCrossEntropyImportanceSampling cannot deal with intersections of threshold events)
+ * #2778 (unit test for getKnownParameterIndices/Values)
  * #2780 (Student from (nu, mu, Covariance) ?)
  * #2785 (The draw() method requires the same number of points in the X and Y directions)
  * #2786 (The colors of some examples are broken)
+ * #2794 (The drawPDF() method of JointDistribution can take ages to produce the graph with no reason)
+ * #2796 (Log.hxx ERROR issue)
+ * #2797 (The Chaboche model should have a Symbolic implementation)
+ * #2798 (There are implicit forbidden variable names for SymbolicFunction)
+ * #2805 (The NonLinearLeastSquaresCalibration-MultiStartSize and GaussianNonLinearCalibration-MultiStartSize ResourceMap keys are unused)
+ * #2810 (Defining an inconsistent OpenTURNSPythonFunction can make Python crash)
+ * #2811 (Compilation fails with clang-19: implicit instantiation of undefined template 'std::char_traits<unsigned char>')
+ * #2812 (The GeneralizedExtremeValueFactory-MaximumEvaluationNumber ResourceMap key does not exist)
+ * #2813 (Graph.setLegendFontSize is ignored)
+ * #2817 (The help page of the JointDistribution can be improved)
+ * #2830 (The TruncatedDistribution.getMarginal() is wrong)
+ * #2832 (Normal copula iso transform)
 
 
 == 1.23 release (2024-06-05) == #release-1.23
