--- a/distro/debian/changelog
+++ b/distro/debian/changelog
@@ -1,8 +1,8 @@
-openturns (1.24~rc1-1) experimental; urgency=medium
+openturns (1.24-1) experimental; urgency=medium
 
-  * New upstream pre-release
+  * New upstream release
 
- -- Julien Schueller <schueller@phimeca.com>  Wed, 23 Oct 2024 10:19:33 +0200
+ -- Julien Schueller <schueller@phimeca.com>  Wed, 25 Nov 2024 10:19:33 +0100
 
 openturns (1.23-1) experimental; urgency=medium
 
