SobolSimulationAlgorithm: Drop setBatchSize

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@
  * ConstantFunction, ConstantEvaluation
 
 ==== API changes ====
+  * Removed deprecated SobolSimulationAlgorithm.setBatchSize method
 
 === Documentation ===
 
