--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
 ==== Major changes ====
 
 ==== New classes ====
+ * New LeastSquaresEquationsSolver class (openturns.experimental)
 
 ==== API changes ====
 
