--- a/TODO
+++ b/TODO
@@ -4,3 +4,4 @@ Remove NegativeBinomial alias in some future version
 Remove NegativeBinomialFactory alias in some future version
 Remove Analytical.set/getPhysicalStartingPoint in some future version
 Remove MetaModelResult.set/getResiduals, MetaModelResult.set/getRelativeErrors for 1.26
+Remove Wilks in some future version
