--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@
  * VertexFieldToPointFunction (openturns.experimental)
  * ConstantFunction, ConstantEvaluation
  * QuantileConfidence (openturns.experimental)
+ * LineSampling (openturns.experimental)
 
 ==== API changes ====
  * Removed deprecated SobolSimulationAlgorithm.setBatchSize method
