Method GridLayout::add
Closes #2762

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,14 +14,15 @@
  * ConstantFunction, ConstantEvaluation
 
 ==== API changes ====
-  * Removed deprecated SobolSimulationAlgorithm.setBatchSize method
-  * Removed deprecated OptimizationAlgorithm.Build(str) methd
+ * Removed deprecated SobolSimulationAlgorithm.setBatchSize method
+ * Removed deprecated OptimizationAlgorithm.Build(str) method
  * Deprecated FORM/SORM/MultiFORM/SystemFORM startingPoint argument and accessors (set it from solver)
  * Deprecated MetaModelResult.set/getResiduals, MetaModelResult.set/getRelativeErrors (use MetaModelValidation.computeMeanSquaredError, computeR2Score)
 
 === Documentation ===
 
 === Python module ===
+  * Added GridLayout.add method to add all subgraphs of another grid
 
 === Miscellaneous ===
  * New c++ csv parser replacing the old bison/flex implementation
