MMResult: Deprecate getResiduals/getRelativeErrors
Closes #2292

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@
   * Removed deprecated SobolSimulationAlgorithm.setBatchSize method
   * Removed deprecated OptimizationAlgorithm.Build(str) methd
  * Deprecated FORM/SORM/MultiFORM/SystemFORM startingPoint argument and accessors (set it from solver)
+ * Deprecated MetaModelResult.set/getResiduals, MetaModelResult.set/getRelativeErrors (use MetaModelValidation.computeMeanSquaredError, computeR2Score)
 
 === Documentation ===
 
