--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@ Remove ComposedCopula in some future version
 Remove NegativeBinomial alias in some future version
 Remove NegativeBinomialFactory alias in some future version
 Remove Analytical.set/getPhysicalStartingPoint in some future version
+Remove MetaModelResult.set/getResiduals, MetaModelResult.set/getRelativeErrors for 1.26
