DistributionFactory: Deprecate setKnownParameter(Point, Indices)

--- a/TODO
+++ b/TODO
@@ -6,3 +6,4 @@ Remove Analytical.set/getPhysicalStartingPoint in some future version
 Remove MetaModelResult.set/getResiduals, MetaModelResult.set/getRelativeErrors for 1.26
 Remove Wilks in some future version
 Remove ConditionalRandomVector alias for 1.26
+Remove deprecated method DistributionFactory.setKnownParameter(Point, Indices)
