Graph: Deprecated setDrawable(Drawable, int)
Closes #2940

--- a/ChangeLog
+++ b/ChangeLog
@@ -29,6 +29,7 @@
  * UserDefinedMetropolisHastings left the experimental module
  * BoundaryMesher left the experimental module
  * Deprecated DistributionFactory.setKnownParameter(Point, Indices)
+ * Deprecated Graph.setDrawable(Drawable, int)
 
 === Documentation ===
 
