SmoothedUniformFactory: Move out of experimental

--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,7 @@
  * FieldFunctionalChaosSobolIndices left the experimental module
  * UserDefinedMetropolisHastings left the experimental module
  * BoundaryMesher left the experimental module
+ * SmoothedUniformFactory left the experimental module
  * Deprecated DistributionFactory.setKnownParameter(Point, Indices)
  * Deprecated Graph.setDrawable(Drawable, int)
 
