ChangeLog: Mention GPR changes

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@
  * ConstantFunction, ConstantEvaluation
  * QuantileConfidence (openturns.experimental)
  * LineSampling (openturns.experimental)
+ * GaussianProcessRandomVector (openturns.experimental)
 
 ==== API changes ====
  * Removed deprecated SobolSimulationAlgorithm.setBatchSize method
@@ -31,6 +32,7 @@
  * SmoothedUniformFactory left the experimental module
  * Deprecated DistributionFactory.setKnownParameter(Point, Indices)
  * Deprecated Graph.setDrawable(Drawable, int)
+ * ConditionedGaussianProcess moved to experimental
 
 === Documentation ===
 
