Set version 1.26dev

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,23 @@
 = New Features =
 
+== 1.26 release (in-progress) == #release-1.26
+
+=== Library ===
+
+==== Major changes ====
+
+==== New classes ====
+
+==== API changes ====
+
+=== Documentation ===
+
+=== Python module ===
+
+=== Miscellaneous ===
+
+
+
 == 1.25 release (2025-06-12) == #release-1.25
 
 === Library ===
