DeconditionedDist: Deprecated for CompoundDist
Closes #3014

--- a/TODO
+++ b/TODO
@@ -6,3 +6,4 @@ Remove Analytical.set/getPhysicalStartingPoint in some future version
 Remove Wilks in some future version
 Remove deprecated method DistributionFactory.setKnownParameter(Point, Indices)
 Remove deprecated method Graph.setDrawable(Drawable, int)
+Remove DeconditionedDistribution alias in some future version
