--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,7 @@
  * GeneralizedParetoValid left the experimental module
  * FunctionalChaosValidation left the experimental module
  * PointToFieldFunctionaChaosAlgorithm left the experimental module
+ * Deprecated DeconditionedDistribution in favor of CompoundDistribution
 
 === Documentation ===
 
